<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="done_label">Done</string>
    <string name="keep_off">Keep Off!</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>

    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>

    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    
    <string name="app_name">Silence Manager</string>
    <string name="action_settings">Settings</string>
    <string name="notification_silenced_until">Silenced until: %1$s:%2$s %3$s</string>
    <string name="notification_silenced_until_military">Silenced until: %1$s:%2$s</string>
    <string name="notification_silenced_indefinitely">Ringer silenced indefinitely</string>
    <string name="notification_click_to_restore">Click to restore volume</string>

    <string name="service_notification_text">Calendar Event Silencing</string>
    <string name="service_notification_text_sub_enabled">Enabled</string>
    <string name="service_notification_text_sub_disabled">Disabled</string>
    
    <string name="silencing_ringer">Silencing ringer</string>
    <string name="restoring_ringer">Restoring ringer</string>

    <string name="preference_dialog_positive">Set</string>
    <string name="preference_dialog_negative">Cancel</string>
    
    <string name="calendar_event_general">General preferences</string>
    <string name="calendar_event_preferences">Calendar event preferences</string>
    <string name="silence_long_events">Long events preferences</string>
    <string name="silence_day_long_events">Ignore long events</string>
    <string name="silence_events_longer_then">Ignore events longer then</string>
    <string name="silence_all_day_events">Ignore all day events</string>
    <string name="license">License</string>

    <string name="silence_calendar_events">Silence calendar events</string>
    <string name="silence_calendar_events_summary">Volume will be silenced the duration of calendar events</string>
    
    <string name="military">Display in Military time</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_summary">Set ringer to vibrate instead of silent</string>
    <string name="volume_restore_level">Volume level to restore</string>
    <string name="media">Media</string>
    <string name="notifications">Notifications</string>
    <string name="ringer">Ringer</string>
    <string name="volume_types">Volume types</string>
    
    <string name="silence_until">Silence Until</string>
    
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>

</resources>
