<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_key_vibrate"
        android:title="@string/vibrate"
        android:summary="@string/vibrate_summary"
        android:defaultValue="false" />
    <PreferenceCategory
        android:title="@string/silence_long_events"
        android:key="pref_key_long_events_category">
	    <CheckBoxPreference
	        android:key="pref_key_long_events_enabled"
	        android:title="@string/silence_day_long_events"
	        android:defaultValue="true" />
	    <com.potter.silencer.ui.preference.TimeDialogPreference
	        android:key="pref_key_long_events_length"
	        android:title="@string/silence_events_longer_then" 
            android:layout="@layout/right_align_summary_preference_item"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/volume_types"
        android:key="pref_key_volume_types">
	    <CheckBoxPreference
	        android:key="pref_key_notifications"
	        android:title="@string/notifications"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="pref_key_media"
	        android:title="@string/media"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="pref_key_ringer"
	        android:title="@string/ringer"
	        android:defaultValue="true" />
	    <com.potter.silencer.ui.preference.VolumeNumberPickerPreference
            android:key="pref_key_volume_restore_level"
            android:title="@string/volume_restore_level" 
            android:layout="@layout/right_align_summary_preference_item"/>
    </PreferenceCategory>
    

</PreferenceScreen>